--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "bun run eleventy"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
