--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@11ty/eleventy": "^3.1.2"
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-navigation": "^1.0.4"
   }
 }
